# poogame

./: .ccls  CMakeLists.txt  README.md
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  poogame
lib/: board.c  board.h  game.c  game.h  start.cpp
